Fix: content overflowing parent in Safari

--- a/frontend/src/components/GuildProfile/GuildProfile.css
+++ b/frontend/src/components/GuildProfile/GuildProfile.css
@@ -2,9 +2,6 @@
     width: 90%;
     max-width: 1920px;
     min-height: calc(100vh - var(--header-height));
-    display: flex;
-    align-items: center;
-    flex-direction: column;
 }
 
 .guild-profile__placeholder {
@@ -39,7 +36,7 @@
     width: 100%;
     height: 100%;
     background-image: url('../../images/guild-profile__placeholder.svg');
-    background-position: center;
+    background-position: center top;
     background-size: contain;
     background-repeat: no-repeat;
 }
